[tool.poetry]
name = "paybox_money"
version = "0.1.0"
description = "Top-level package for Paybox.Money python api client."
authors = ["Dastan Abd <dastand.climber@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
